--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "prettier": "^2.2.1",
     "prettier-eslint": "^11.0.0",
     "ts-jest": "^26.5.4"
+  },
+  "dependencies": {
+    "neo4j-driver": "^4.2.3"
   }
 }
